Fix table styles under dark mode

--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -10,12 +10,12 @@
 
   thead {
     color: var(--color-text);
-    background: var(--gray-300);
+    background: light-dark(var(--gray-300),var(--gray-700));
   }
 
   tbody tr {
     border-block-start-width: var(--border);
-    background: var(--gray-100);
+    background: light-dark(var(--gray-100),var(--gray-900));
   }
 
   tr:hover {
@@ -32,7 +32,7 @@
   }
 
   th {
-    background: var(--gray-300);
+    background: light-dark(var(--gray-300),var(--gray-700));
   }
 
   tfoot {
